Bugfix/491 Invalid Response for GetSettlementBySettlementParticipantAccount (#49)
* Fixed demo scripts to run again after changes in ml-api-adapter and central-ledger
* Fix settlementTransfer demo scripts
* Fix settlementTransfer demo scripts (#48)
* Utilise test scripts in sequence
* Implementation aligned to diagram, endpoint added, coverage 100
