# src/handlers/settlements/{settlementId}/participants/{participantId}/accounts/{accountId}.js
@@ -16,6 +16,9 @@
  their names indented and be marked with a '-'. Email address can be added
  optionally within square brackets <email>.
  * Gates Foundation
+- Name Surname <name.surname@gatesfoundation.com>
+
+ * Georgi Georgiev <georgi.georgiev@modusbox.com>
  * Valentin Genev <valentin.genev@modusbox.com>
  * Deon Botha <deon.botha@modusbox.com>
  --------------
@@ -40,7 +43,10 @@ module.exports = {
 
   get: async function getSettlementBySettlementParticipantAccount (request, h) {
     try {
-      const Enums = await request.server.methods.enums('settlementWindowStates')
+      const Enums = {
+        settlementWindowStates: await request.server.methods.enums('settlementWindowStates'),
+        ledgerAccountTypes: await request.server.methods.enums('ledgerAccountTypes')
+      }
       const { settlementId, participantId, accountId } = request.params
       let result = await Settlements.getByIdParticipantAccount({ settlementId, participantId, accountId }, Enums)
       return h.response(result)
@@ -49,41 +55,4 @@ module.exports = {
       return Boom.badRequest(e)
     }
   }
-  /**
-   * summary: Acknowledegement of settlement by updating the reason and state by Settlements Id, Participant Id and accounts Id.
-   * description:
-   * parameters: settlementId, participantId, accountId, settlementParticipantAccountUpdate
-   * produces: application/json
-   * responses: 200, 400, 401, 404, 415, default
-   */
-  // put: async function updateSettlementBySettlementParticipantAccount (request, h) {
-  //   const getData = new Promise((resolve, reject) => {
-  //     switch (request.server.app.responseCode) {
-  //       case 200:
-  //       case 400:
-  //       case 401:
-  //       case 404:
-  //       case 415:
-  //         dataAccess.put[`${request.server.app.responseCode}`](request, h, (error, mock) => {
-  //           if (error) reject(error)
-  //           else if (!mock.responses) resolve()
-  //           else if (mock.responses && mock.responses.response) resolve(Boom.boomify(new Error(mock.responses.message), { statusCode: mock.responses.code }))
-  //           else resolve(mock.responses)
-  //         })
-  //         break
-  //       default:
-  //         dataAccess.put[`default`](request, h, (error, mock) => {
-  //           if (error) reject(error)
-  //           else if (!mock.responses) resolve()
-  //           else if (mock.responses && mock.responses.response) resolve(Boom.boomify(new Error(mock.responses.message), { statusCode: mock.responses.code }))
-  //           else resolve(mock.responses)
-  //         })
-  //     }
-  //   })
-  //   try {
-  //     return await getData
-  //   } catch (e) {
-  //     throw (Boom.boomify(e))
-  //   }
-  // }
 }
